--- a/src/main/resources/static/newscache/template/navbar.html
+++ b/src/main/resources/static/newscache/template/navbar.html
@@ -17,7 +17,7 @@
              </ul>
             <form class="navbar-form" id="search" role="search">
                 <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search" style="width: 90%">
+                    <input type="text" class="form-control" placeholder="Search" ng-model="vm.interest" uib-typeahead="interest for interest in vm.interestList | filter:$viewValue:vm.startsWith | limitTo:8" autocomplete="off"/>
                     <div class="input-group-btn">
                         <button class="btn btn-primary" type="submit"><i class="glyphicon glyphicon-search"></i></button>
                     </div>
