--- a/src/main/resources/static/newscache/template/navbar.html
+++ b/src/main/resources/static/newscache/template/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default" style="border-radius: 0;">
+<nav class="navbar navbar-default navbar-fixed-top" role="naviagtion" style="border-radius: 0;padding-left: 20%; padding-right: 20%">
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed burger-button" data-toggle="collapse" data-target="#navbar">
@@ -11,15 +11,22 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar">
             <ul class="nav navbar-nav navbar-right">
-                <li>
-                    <button type="button" class="btn btn-primary" style="margin-top: 7px"><i class="glyphicon glyphicon-cog"></i> </button>
-                </li>
-             </ul>
-            <form class="navbar-form" id="search" role="search">
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search" ng-model="vm.interest" uib-typeahead="interest for interest in vm.interestList | filter:$viewValue:vm.startsWith | limitTo:8" autocomplete="off"/>
-                    <div class="input-group-btn">
-                        <button class="btn btn-primary" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                <div class="btn-group" uib-dropdown is-open="status.isopen">
+                    <button type="button" id="settings" class="btn btn-primary" style="margin-top: 7px" uib-dropdown-toggle ng-disabled="disabled"><i class="glyphicon glyphicon-cog"></i> </button>
+                    <ul uib-dropdown-menu role="menu" aria-labelledby="settings">
+                        <li role="menuitem"><a href="#">Setting 1</a></li>
+                        <li role="menuitem"><a href="#">Setting 2</a></li>
+                        <li role="menuitem"><a href="#">Setting 3</a></li>
+                        <li class="divider"></li>
+                        <li role="menuitem"><a href="#">Log Out</a></li>
+                    </ul>
+                </div>
+            </ul>
+            <form class="navbar-form" role="search" id="search">
+                <div class="input-group" >
+                    <input type="text" size="40" class="form-control" placeholder="Search Interests" ng-model="vm.interest" uib-typeahead="interest for interest in vm.interestList | filter:$viewValue:vm.startsWith | limitTo:8" autocomplete="off"/>
+                    <div class="input-group-btn" id="searchButton">
+                        <button class="btn btn-primary" type="submit" ><i class="glyphicon glyphicon-search"></i></button>
                     </div>
                 </div>
             </form>
