--- a/src/main/resources/static/newscache/template/interest.html
+++ b/src/main/resources/static/newscache/template/interest.html
@@ -1,4 +1,6 @@
-<div class="container">
-
-
+<div class="jumbotron">
+    <div class="container">
+        <h1>Star Wars</h1>
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">Subscribe</a></p>
+    </div>
 </div>
