--- a/src/main/resources/static/newscache/template/interest.html
+++ b/src/main/resources/static/newscache/template/interest.html
@@ -1,6 +1,9 @@
-<div class="jumbotron">
-    <div class="container">
-        <h1>Star Wars</h1>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Subscribe</a></p>
+<div class="container-fluid">
+    <div class="jumbotron"></div>
+    <div class="subscribe">
+        <h2>STAR WARS</h2>
+        <button class="btn btn-primary">Follow</button>
     </div>
+</div>
+</div>
 </div>
