--- a/src/main/resources/static/newscache/template/interest.html
+++ b/src/main/resources/static/newscache/template/interest.html
@@ -1,8 +1,11 @@
 <div class="container-fluid">
-    <div class="jumbotron"></div>
-    <div class="subscribe">
-        <h2>STAR WARS</h2>
-        <button class="btn btn-primary">Follow</button>
+    <div class="jumbotron">
+        <div class="subscribe">
+            <h2>{{vm.interestName}}</h2>
+            <div style="text-align: center">
+                <button class="btn btn-primary">Follow</button>
+            </div>
+        </div>
     </div>
 </div>
 </div>
