Fixed the issue with dynamically loading the images. Added new images for other interests as well.

--- a/src/main/resources/static/newscache/template/interest.html
+++ b/src/main/resources/static/newscache/template/interest.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <div class="jumbotron" back-img-directive url="vm.interest.image">
+    <div class="jumbotron" back-img-directive url="vm.convert(vm.interestName)">
         <div class="subscribe">
             <h2>{{vm.interestName}}</h2>
             <div style="text-align: center">
