--- a/src/main/resources/static/newscache/template/navbar.html
+++ b/src/main/resources/static/newscache/template/navbar.html
@@ -26,7 +26,7 @@
                 <div class="input-group" >
                     <input type="text" size="40" class="form-control" placeholder="Search Interests" ng-model="vm.interest" uib-typeahead="interest for interest in vm.interestList | filter:$viewValue:vm.startsWith | limitTo:8" autocomplete="off"/>
                     <div class="input-group-btn" id="searchButton">
-                        <button class="btn btn-primary" type="submit" ng-click="vm.search()"><i class="glyphicon glyphicon-search"></i></button>
+                        <button class="btn btn-primary" ng-click="vm.search()"><i class="glyphicon glyphicon-search"></i></button>
                     </div>
                 </div>
             </form>
