--- a/src/main/resources/static/css/newscache.css
+++ b/src/main/resources/static/css/newscache.css
@@ -16,3 +16,47 @@
     background-color: rgba(245, 245, 220, 0.9);
     margin-bottom: 10%;
 }
+
+.panel-default > .panel-heading{
+    color: #fff;
+    background-color: #337ab7;
+    border-color: #2e6da4;
+}
+
+@media (max-width: 975px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin: 7.5px -15px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .navbar-text {
+        float: none;
+        margin: 15px 0;
+    }
+    /* since 3.1.0 */
+    .navbar-collapse.collapse.in {
+        display: block!important;
+    }
+    .collapsing {
+        overflow: hidden!important;
+    }
+}
