--- a/src/main/resources/static/newscache/template/interest.html
+++ b/src/main/resources/static/newscache/template/interest.html
@@ -7,10 +7,13 @@
             </div>
         </div>
     </div>
-    <div class="panel-group col-sm-4" ng-repeat="story in vm.storyList.stories track by story.id">
+    <div class="panel-group col-md-4 col-sm-6" ng-repeat="story in vm.storyList.stories track by story.id">
         <div class="panel panel-default">
             <div class="panel-heading">{{story.title}}</div>
+            <img ng-src={{story.iurl}} class="img-responsive center-block">
             <div class="panel-body">{{story.kwic}}</div>
         </div>
     </div>
 </div>
+
+
