--- a/src/main/resources/static/css/newscache.css
+++ b/src/main/resources/static/css/newscache.css
@@ -13,7 +13,7 @@
 .subscribe{
     display: inline-block;
     padding: 5% 5% 20%;
-    background-color: rgba(245, 245, 220, 0.9);
+    background-color: rgba(204, 204, 179, 0.95);
     margin-bottom: 10%;
 }
 
@@ -21,6 +21,13 @@
     color: #fff;
     background-color: #337ab7;
     border-color: #2e6da4;
+}
+
+.panel-group{
+    display: inline-block;
+    width: calc(100%/3);
+    padding-left: 2%;
+    padding-right: 2%;
 }
 
 @media (max-width: 975px) {
