--- a/src/main/resources/static/newscache/template/interest.html
+++ b/src/main/resources/static/newscache/template/interest.html
@@ -10,7 +10,7 @@
     <div masonry>
         <!--TODO not using col-sm-6 col-md-4 because of angular-masonry glitch-->
         <div class="masonry-brick panel-group" ng-repeat="story in vm.storyList.stories track by story.id">
-            <div class="panel panel-default">
+            <div class="panel panel-default" ng-click="vm.popUp(story)">
                 <div class="panel-heading">{{story.title}}</div>
                 <img ng-src={{story.iurl}} class="img-responsive center-block">
                 <div class="panel-body">{{story.kwic}}</div>
