--- a/src/main/resources/static/newscache/template/storyModal.html
+++ b/src/main/resources/static/newscache/template/storyModal.html
@@ -1,16 +1,27 @@
-<div id="story-modal">
+<div id="story-modal" class="container-fluid">
     <div class="modal-header">
-        <h3 class="modal-title text-center">{{vm.story.title}}</h3>
+        <button type="button" class="close" aria-hidden="true" ng-click="vm.closeStory('ok')">&times;</button>
+        <h4 class="modal-title text-center">{{vm.story.title}}</h4>
     </div>
-    <div class="modal-body">
-        <div class="panel panel-default">
-            <img ng-src={{vm.story.iurl}} class="img-responsive center-block">
-            <div class="panel-body">{{vm.story.kwic}}</div>
+    <div class="modal-body story-block">
+        <div class="panel-group col-md-6 ">
+            <div class="panel panel-default">
+                <img ng-src={{vm.story.iurl}} class="img-responsive center-block">
+                <a ng-href={{vm.story.url}}>
+                    <div class="panel-body">{{vm.story.kwic}}</div>
+                    <div class="panel-body">Click to go to page</div>
+                </a>
+            </div>
+        </div>
+        <div class="panel-group col-md-6">
+            <div class="panel panel-default">
+
+            </div>
         </div>
     </div>
-    <div class="modal-footer">
-        <div class="text-center">
-            <button ng-click="vm.closeStory('ok')" class="btn btn-primary">Close</button>
-        </div>
-    </div>
+    <!--<div class="modal-footer">-->
+    <!--<div class="text-center">-->
+    <!--<button  class="btn btn-primary">Close</button>-->
+    <!--</div>-->
+    <!--</div>-->
 </div>
