Created comments java controller and services. Created javascript service for modal.

--- a/src/main/resources/static/newscache/template/storyModal.html
+++ b/src/main/resources/static/newscache/template/storyModal.html
@@ -14,9 +14,25 @@
             </div>
         </div>
         <div class="panel-group col-md-6">
-            <div class="panel panel-default">
 
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    Nischay
+                </div>
+                <div class="panel-body">
+                    Man this is awesome
+                </div>
             </div>
+
+            <div class="panel panel-default">
+                <div class="panel-body form-inline">
+                    <button class="btn btn-primary" style="float: right;">Post</button>
+                    <div style="overflow: hidden; padding-right: 10px">
+                        <input type="text" class="form-control" placeholder="Comment" style="width: 100%">
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
