--- a/src/main/resources/static/newscache/template/storyModal.html
+++ b/src/main/resources/static/newscache/template/storyModal.html
@@ -13,26 +13,24 @@
                 </a>
             </div>
         </div>
-        <div class="panel-group col-md-6">
-
+        <div class="panel-group col-md-6"  ng-repeat="comment in vm.comments">
             <div class="panel panel-default">
-                <div class="panel-heading">
-                    Nischay
-                </div>
+                <div class="panel-heading">{{comment.user.firstName}} {{comment.user.lastName}}</div>
                 <div class="panel-body">
-                    Man this is awesome
+                    {{comment.comment}}
                 </div>
             </div>
-
-            <div class="panel panel-default">
-                <div class="panel-body form-inline">
-                    <button class="btn btn-primary" style="float: right;" ng-click="vm.save()">Post</button>
-                    <div style="overflow: hidden; padding-right: 10px">
-                        <input type="text" class="form-control" placeholder="Comment" style="width: 100%" ng-model="vm.storyComment">
-                    </div>
-                </div>
-            </div>
-
         </div>
+    <div class="panel-group col-md-6">
+        <div class="panel panel-default">
+            <div class="panel-body form-inline">
+                <button class="btn btn-primary" style="float: right;" ng-click="vm.save()">Post</button>
+                <div style="overflow: hidden; padding-right: 10px">
+                    <input type="text" class="form-control" placeholder="Comment" style="width: 100%" ng-model="vm.storyComment">
+                </div>
+            </div>
+        </div>
+    </div>
+
     </div>
 </div>
