--- a/src/main/resources/static/newscache/template/storyModal.html
+++ b/src/main/resources/static/newscache/template/storyModal.html
@@ -13,7 +13,8 @@
                 </a>
             </div>
         </div>
-        <div class="panel-group col-md-6"  ng-repeat="comment in vm.comments">
+        <div id="commentWrapper" class="col-md-6" style="height: 50vh; overflow: auto">
+        <div class="panel-group"  ng-repeat="comment in vm.comments">
             <div class="panel panel-default">
                 <div class="panel-heading">{{comment.user.firstName}} {{comment.user.lastName}}</div>
                 <div class="panel-body">
@@ -21,8 +22,10 @@
                 </div>
             </div>
         </div>
+    </div>
+
     <div class="panel-group col-md-6">
-        <div class="panel panel-default">
+        <div class="panel panel-default"  style="width: 97%;">
             <div class="panel-body form-inline">
                 <button class="btn btn-primary" style="float: right;" ng-click="vm.save()">Post</button>
                 <div style="overflow: hidden; padding-right: 10px">
