Added stuff for the home. Also changed a few things in the security config files.

--- a/src/main/resources/static/newscache/template/login.html
+++ b/src/main/resources/static/newscache/template/login.html
@@ -14,7 +14,10 @@
             <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit" ng-click="vm.submit()">Sign in</button>
         </form><!-- /form -->
         <a href="#" class="forgot-password">
-            Forgot the password?
+            Forgot your password?
+        </a>
+        <a href="#" class="forgot-password">
+            New User?
         </a>
     </div><!-- /card-container -->
 </div><!-- /container -->
