Created the cookie stuff for storing JSessions. included the modules as well.

--- a/src/main/resources/static/newscache/template/login.html
+++ b/src/main/resources/static/newscache/template/login.html
@@ -5,7 +5,7 @@
         <form class="form-signin">
             <span id="reauth-email" class="reauth-email"></span>
             <input type="text" id="inputEmail" class="form-control" ng-model="vm.username" placeholder="username" required autofocus>
-            <input type="password" id="inputPassword" class="form-control" ng-model="vm.password" placeholder="Password" required>
+            <input type="password" id="inputPassword" class="form-control" ng-model="vm.password" placeholder="password" required>
             <div id="remember" class="checkbox">
                 <label>
                     <input type="checkbox" value="remember-me"> Remember me
