Added Rest handlers for security logout

--- a/src/main/resources/static/newscache/template/navbar.html
+++ b/src/main/resources/static/newscache/template/navbar.html
@@ -18,7 +18,7 @@
                         <li role="menuitem"><a href="#">Setting 2</a></li>
                         <li role="menuitem"><a href="#">Setting 3</a></li>
                         <li class="divider"></li>
-                        <li role="menuitem"><a href="#">Log Out</a></li>
+                        <li role="menuitem"><a href="#" ng-click="vm.logout()">Log Out</a></li>
                     </ul>
                 </div>
             </ul>
