--- a/src/main/resources/static/newscache/template/login.html
+++ b/src/main/resources/static/newscache/template/login.html
@@ -12,12 +12,12 @@
                 </label>
             </div>
             <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit" ng-click="vm.submit()">Sign in</button>
-        </form><!-- /form -->
-        <a href="#" class="forgot-password">
+        </form>
+        <a class="forgot-password">
             Forgot your password?
         </a>
-        <a href="#" class="forgot-password">
+        <a ng-click="vm.loginPopUp()" class="forgot-password">
             New User?
         </a>
-    </div><!-- /card-container -->
-</div><!-- /container -->
+    </div>
+</div>
