--- a/src/main/resources/static/newscache/template/interest.html
+++ b/src/main/resources/static/newscache/template/interest.html
@@ -3,7 +3,7 @@
         <div class="subscribe">
             <h2>{{vm.interestName}}</h2>
             <div style="text-align: center">
-                <button class="btn btn-primary">Follow</button>
+                <button class="btn btn-primary" ng-click="vm.subscription()">{{vm.subscribe}}</button>
             </div>
         </div>
     </div>
