--- a/src/main/resources/static/css/newscache.css
+++ b/src/main/resources/static/css/newscache.css
@@ -4,6 +4,14 @@
     margin-right: 5%;
 }
 
+#interest{
+    margin-left: 1%;
+    margin-right: 1%;
+    margin-bottom: 2%;
+    height: 150px;
+    width: 23%;
+}
+
 .jumbotron{
     background-size: cover;
     margin-left: 10%;
@@ -190,4 +198,10 @@
     height: 100%;
     background-repeat: no-repeat;
     background-image: linear-gradient(rgb(104, 145, 162), rgb(12, 97, 33));
+}
+
+.thumbnail{
+    /*width: 20%;*/
+    height: 150px;
+    overflow: hidden;
 }
