--- a/src/main/resources/static/css/newscache.css
+++ b/src/main/resources/static/css/newscache.css
@@ -1,15 +1,27 @@
-#search{
-    display:block;
-    text-align:center;
+#search {
+    display: block;
+    text-align: center;
     margin-right: 5%;
 }
 
-#interest{
+#interestBlock{
+    position: relative;
+}
+
+#interest {
     margin-left: 1%;
     margin-right: 1%;
     margin-bottom: 2%;
-    height: 150px;
-    width: 23%;
+    height: 300px;
+    width: 31%;
+    text-align: center;
+    background-repeat: no-repeat;
+    background-size:cover;
+    background-position:center;
+}
+
+#interestButton{
+    position: relative;
 }
 
 .jumbotron{
